# taskflow

./: .env.test  .gitignore  .pre-commit-config.yaml  changelog.md  checklist.txt  contributing.md  debug_practice.py  hello.py  onboarding.py  profile.py  pyproject.toml  pytest.ini  readme.md  requirements-dev.in  requirements.in  requirements.txt  run.py  storage.py  taskflow_tasks.json  taskflow_tasks.txt  tasks.py  weather.py
data/: taskflow_tasks.json  weather_cache.json
docs/: day-01-welcome-and-setup.md  day-02-variables-and-data-types.md  day-03-user-input-and-logic.md  day-04-list-and-loops.md  day-05-dictionary-and-sets.md  day-06-functions.md  day-11-module-import.md  day-14-api-and-regx.md  day-15-milestone-v1.md  day-17-decorator-and-context.md  day-18-virtual-enviorment.md  day-20-phase-milestone.md  day-21-clean-code-principal.md  technical-debt.md
docs/adr/: ADR-001.md  ADR-002.md  ADR-003.md
documents/: phase-3-plan.md
scripts/: setup.sh
taskflow/: __init__.py  async_startup.py  cli.py  config.py  context.py  decorators.py  env_config.py  errors.py  events.py  filters.py  logging_config.py  main.py  parser.py  services.py  shell.py  strategies.py  utils.py
taskflow/core/: __init__.py  stats.py  task.py  task_factory.py  task_types.py  tasks.py
taskflow/display/: __init__.py  commands.py  renderer.py
taskflow/integrations/: __init__.py  weather.py
taskflow/repositories/: __init__.py  base.py  json_repo.py
taskflow/storage/: __init__.py  json_store.py
tests/: conftest.py  test_async_startup.py  test_decorators.py  test_env_config.py  test_events.py  test_filters.py  test_parser.py  test_repository.py  test_services.py  test_stats.py  test_storage.py  test_strategies.py  test_task.py  test_task_types.py  test_weather.py
tutorials/: day-01-welcome-and-setup.md  day-02-variables-and-data-types.md  day-06-functions.md  day-07-review-and-debugging.md  day-08-file-handling.md  day-09-json.md  day-10-error-handling.md  day-11-module-import.md  day-12-oop-1.md  day-13-oop-2.md  day-14-api-and-regx.md  day-15-milestone-v1.md  day-16-comprehensions-and-lambdas.md  day-18-virtual-enviorment.md  day-19-git-version-control.md  day-20-phase-milestone.md  day-21-clean-code-principal.md  day-22-project-structure.md  day-23-logging-and-observability.md  day-24-env-config.md  day-25-testing-fundamentals.md  day-26-mocking-and-coverage.md  day-27-type-hints.md  day-28.design-pattern-1.md  day-29-design-pattern-2.md
