[build-system]
requires      = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"


#  Project metadata 

[project]
name        = "taskflow-ai"
version     = "1.1.0"
description = "Intelligent task management from the terminal — 90-day Python series"
readme      = "README.md"
license     = { text = "MIT" }
authors     = [{ name = "Udit Rawat", email = "udit@example.com" }]
keywords    = ["tasks", "productivity", "ai", "cli"]

requires-python = ">=3.14"

dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pip-tools>=7.0",
    "python-dotenv>=1.0",
]
async = [
    "aiohttp>=3.9",
]
ai = [
    # Phase 4 — uncomment when needed
    # "anthropic>=0.25",
    # "openai>=1.30",
]

[project.scripts]
taskflow = "taskflow.main:main"

[project.urls]
Homepage   = "https://github.com/udit/taskflow"
Repository = "https://github.com/udit/taskflow"


#  Setuptools 

[tool.setuptools.packages.find]
where   = ["."]
include = ["taskflow*"]


#  Black ─

[tool.black]
line-length    = 88
target-version = ["py314"]


#  Ruff 

[tool.ruff]
line-length    = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]


#  Mypy 

[tool.mypy]
python_version          = "3.14"
warn_return_any         = true
warn_unused_configs     = true
warn_redundant_casts    = true
warn_unused_ignores     = true
no_implicit_optional    = true
strict_equality         = true
ignore_missing_imports  = true

[[tool.mypy.overrides]]
module                = ["taskflow.core.*", "taskflow.services", "taskflow.storage.*"]
strict                = true
disallow_untyped_defs = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module                    = ["taskflow.display.*", "taskflow.integrations.*"]
disallow_untyped_defs     = false
warn_return_any           = false


#  Pytest 

[tool.pytest.ini_options]
testpaths      = ["tests"]
python_files   = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts        = "-v --tb=short"


#  Coverage 

[tool.coverage.run]
source  = ["taskflow"]
omit    = ["tests/*", "run.py"]
branch  = true

[tool.coverage.report]
show_missing  = true
skip_covered  = false
fail_under    = 75
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
